Fixed a css bug that was preventing the site from scrolling smoothly on mobile devices.

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -12,9 +12,6 @@
 @import "footer";
 
 body, html {
-  height: 100%;
-  min-height: 100%;
-  overflow: auto;
   color: $soft-black;
   background: #ddd;
   a {
